[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/Menus/_f93d1e6a-a0ca-4952-945f-72eefe307a39.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/History_button.gd" type="Script" id=3]
[ext_resource path="res://assets/Fonts/ButtonsTheme.tres" type="Theme" id=4]
[ext_resource path="res://assets/Fonts/a_space/A-Space Regular Demo.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=10]
size = 38
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.34902, 0.482353, 0.768627, 0.278431 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "
"
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.862745, 0.862745, 0.862745, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -110.0
margin_right = 1939.0
margin_bottom = 1248.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_top = 187.0
margin_right = 178.0
margin_bottom = 351.0

[node name="Start_button" type="Button" parent="VBoxContainer"]
modulate = Color( 0.976471, 0.976471, 0.976471, 1 )
margin_right = 352.0
margin_bottom = 44.0
rect_min_size = Vector2( -0.3, 0 )
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
action_mode = 0
text = "START GAME"
flat = true

[node name="History_button" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 352.0
margin_bottom = 94.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.682353, 0.0745098, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 6 )
toggle_mode = true
action_mode = 0
text = "HISTORY"
flat = true
script = ExtResource( 3 )

[node name="Exit_button" type="Button" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 352.0
margin_bottom = 144.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.682353, 0.0745098, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
action_mode = 0
text = "EXIT"

[node name="Devs" type="Label" parent="."]
margin_left = 13.0
margin_top = 680.0
margin_right = 275.0
margin_bottom = 694.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Created by: Nicolas Rafael and Enzo Melo"

[connection signal="pressed" from="VBoxContainer/Start_button" to="." method="_on_Start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/History_button" to="." method="_on_History_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit_button" to="." method="_on_Exit_button_pressed"]
